[workspace]
resolver = "2"
members = ["core", "unique", "unique-macros", "orm", "css", "frontend", "cli", "bench/actix", "bindings/js", "bindings/python"]

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Unique.js Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Resolutefemi/unique"
description = "One API surface, infinite languages. A polyglot web framework with a Rust core."
homepage = "https://unique.js.org"
documentation = "https://docs.rs/unique"
readme = "README.md"
keywords = ["web", "framework", "http", "server", "rust"]
categories = ["web-programming", "web-programming::http-server", "network-programming"]
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP parsing (hand-rolled for control + zero-allocation hot path)
httparse = "1"
bytes = "1"

# Performance primitives
smallvec = { version = "1", features = ["serde", "union"] }
bytes-utils = "0.1"
parking_lot = "0.12"

# Concurrency primitives
dashmap = "6"
crossbeam = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Misc utilities
regex = "1"
once_cell = "1"
thiserror = "1"
notify = "7"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "unwind"
strip = "symbols"

# A dedicated profile for the benchmark binaries — same as release but
# without stripping, so perf can resolve symbols.
[profile.bench]
opt-level = 3
lto = "thin"
debug = true
