[package]
name = "kungfu-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords = ["web", "framework", "cli", "server", "kungfu"]
categories = ["web-programming", "command-line-utilities", "development-tools"]
rust-version.workspace = true
description = "The `kungfu` command-line tool — new, start --watch, build, migrate, generate admin, deploy"

[[bin]]
name = "kungfu"
path = "src/main.rs"

[dependencies]
kungfu-core = { path = "../core" }
kungfu = { path = "../kungfu" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
notify = { workspace = true }
