[package]
name = "unique-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords = ["web", "framework", "cli", "server", "unique"]
categories = ["web-programming", "command-line-utilities", "development-tools"]
rust-version.workspace = true
description = "The `unique` command-line tool — new, start --watch, build, migrate, generate admin, deploy"

[[bin]]
name = "unique"
path = "src/main.rs"

[dependencies]
unique-core = { path = "../core" }
unique = { path = "../unique" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
notify = { workspace = true }
