[package]
name = "unique-css"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords = ["web", "framework", "css", "tailwind", "unique"]
categories = ["web-programming", "parsing"]
rust-version.workspace = true
description = "Tailwind-like utility CSS engine for the Unique.js framework — 100+ utility classes, responsive prefixes, state variants"

[lib]
name = "unique_css"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true }
walkdir = "2"
