[package]
name = "kungfu-frontend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords = ["web", "framework", "ssr", "frontend", "kungfu"]
categories = ["web-programming", "template-engine"]
rust-version.workspace = true
description = "Frontend module for the Kungfu.js framework — SSR, .kng files, live reload, type generation"

[lib]
name = "kungfu_frontend"
path = "src/lib.rs"

[dependencies]
kungfu-core = { path = "../core" }
kungfu-css = { path = "../css" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
parking_lot = { workspace = true }
walkdir = "2"

[dev-dependencies]
which = "6"
