[package]
name = "unique"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords = ["web", "framework", "http", "server", "polyglot"]
categories.workspace = true
rust-version.workspace = true
description = "Idiomatic Rust API for the Unique.js polyglot web framework — fast, secure, simple"

[lib]
name = "unique"
path = "src/lib.rs"

[dependencies]
unique-core = { path = "../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde = { workspace = true }

[[example]]
name = "hello"
path = "examples/hello.rs"

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "middleware"
path = "examples/middleware.rs"

[[example]]
name = "params"
path = "examples/params.rs"

[[example]]
name = "errors"
path = "examples/errors.rs"
