[package]
name = "unique-bench-actix"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Actix-web equivalent of the unique bench, for apples-to-apples comparison"
publish = false

[[bin]]
name = "actix_bench"
path = "src/main.rs"

[dependencies]
actix-web = "4"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
