[package]
name = "unique-python"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Python binding for the Unique.js polyglot web framework (via pyo3)"
publish = false

[lib]
name = "unique_python"
crate-type = ["cdylib"]

[dependencies]
unique-core = { path = "../../core" }
unique-css = { path = "../../css" }
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
parking_lot = { workspace = true }
