[package]
name = "todo-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "todo-app"
path = "src/main.rs"

[dependencies]
kungfu = { path = "../../kungfu" }
kungfu-core = { path = "../../core" }
kungfu-orm = { path = "../../orm", features = ["sqlite"] }
kungfu-macros = { path = "../../kungfu-macros" }
kungfu-css = { path = "../../css" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
