[package]
name = "todo-app"
version = "0.1.0"
edition = "2021"
publish = false
description = "Example todo app built with Unique.js (not published to crates.io)"

[[bin]]
name = "todo-app"
path = "src/main.rs"

[dependencies]
unique = { path = "../../unique" }
unique-core = { path = "../../core" }
unique-orm = { path = "../../orm", features = ["sqlite"] }
unique-macros = { path = "../../unique-macros" }
unique-css = { path = "../../css" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
