[package]
name = "kungfu-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core engine for the Kungfu.js polyglot web framework"
repository = "https://github.com/Resolutefemi/kungfu"
homepage = "https://github.com/Resolutefemi/kungfu"
keywords = ["web", "framework", "http", "server", "polyglot"]
categories = ["web-programming", "network-programming"]

[lib]
name = "kungfu_core"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
httparse = "1"
bytes = { workspace = true }
smallvec = { workspace = true }
dashmap = { workspace = true }
crossbeam = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }
notify = { workspace = true }
socket2 = { version = "0.5", features = ["all"] }
base64 = "0.22"
ring = "0.17"
flate2 = "1"

# Optional: SIMD-accelerated JSON for x86_64 with AVX2.
# Enable with `--features simd`. Falls back to serde_json on other arches.
simd-json = { version = "0.13", optional = true }

# Optional: io_uring zero-copy I/O on Linux 5.1+.
# Enable with `--features io_uring`. Falls back to tokio on other platforms.
# 2-3x throughput improvement on Linux. See PERF.md.
tokio-uring = { version = "0.5", optional = true }

# Optional: HTTP/3 via quinn + h3.
# Enable with `--features http3`. Requires UDP.
# NOTE: h3 crate API is unstable — feature flag exists but the actual
# implementation will be added when h3 stabilises. For now, http3 is a no-op.
quinn = { version = "0.11", optional = true }

[features]
default = []
simd = ["dep:simd-json"]
io_uring = ["dep:tokio-uring"]
ffi = []
http3 = ["dep:quinn"]

[dev-dependencies]
tokio = { workspace = true }
