[package]
name = "kungfu-css"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/Resolutefemi/kungfu"
homepage = "https://github.com/Resolutefemi/kungfu"
keywords = ["web", "framework"]
categories = ["web-programming"]
description = "Kungfu.js framework component"

[lib]
name = "kungfu_css"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true }
walkdir = "2"
