[package]
name = "kungfu-frontend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/Resolutefemi/kungfu"
homepage = "https://github.com/Resolutefemi/kungfu"
keywords = ["web", "framework"]
categories = ["web-programming"]
description = "Kungfu.js framework component"

[lib]
name = "kungfu_frontend"
path = "src/lib.rs"

[dependencies]
kungfu-core = { path = "../core" }
kungfu-css = { path = "../css" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
walkdir = "2"
