[package]
name = "kungfu-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/Resolutefemi/kungfu"
homepage = "https://github.com/Resolutefemi/kungfu"
keywords = ["web", "framework"]
categories = ["web-programming"]
description = "Kungfu.js framework component"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
