[package]
name = "kungfu-python"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Python binding for the Kungfu.js polyglot web framework (via pyo3)"
publish = false

[lib]
name = "kungfu_python"
crate-type = ["cdylib"]

[dependencies]
kungfu-core = { path = "../../core" }
kungfu-css = { path = "../../css" }
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }
tokio = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
