[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "kungfu"
version = "1.0.0"
description = "Python binding for the Kungfu.js polyglot web framework"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Framework :: AsyncIO",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "kungfu._native"
