[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "kungfu"
version = "1.0.0"
description = "Python binding for the Kungfu.js polyglot web framework"
requires-python = ">=3.8"
authors = [{ name = "Resolutefemi", email = "ariyooluwafemi487@gmail.com" }]
license = { text = "MIT OR Apache-2.0" }
keywords = ["web", "framework", "rust", "http", "server", "polyglot"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Framework :: AsyncIO",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
]

[project.urls]
Homepage = "https://github.com/Resolutefemi/kungfu"
Repository = "https://github.com/Resolutefemi/kungfu"
Documentation = "https://github.com/Resolutefemi/kungfu/blob/main/docs/api-reference.md"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "kungfu._native"
